--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/image/icon-512.png" />
-    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”>
+    <link rel="icon" href="%PUBLIC_URL%/image/icon-512.png"/>
+    <link rel=”manifest” href=”%PUBLIC_URL%/manifest.json”/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
